--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  web_socket_channel: ^2.4.4
+  flutter_secure_storage: ^9.0.0
+  dio: ^5.4.1
+  provider: ^6.1.2
+  chat_bubbles: ^1.6.0
 
 dev_dependencies:
   flutter_test:
